crates/ndc-sqlserver/tests/snapshots/query_tests__relationships__dup_array_relationship.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Albums": {
          "rows": [
            {
              "title": "For Those About To Rock We Salute You"
            },
            {
              "title": "Let There Be Rock"
            }
          ]
        },
        "Albums2": {
          "rows": [
            {
              "title": "For Those About To Rock We Salute You"
            },
            {
              "title": "Let There Be Rock"
            }
          ]
        }
      },
      {
        "Albums": {
          "rows": [
            {
              "title": "Balls to the Wall"
            },
            {
              "title": "Restless and Wild"
            }
          ]
        },
        "Albums2": {
          "rows": [
            {
              "title": "Balls to the Wall"
            },
            {
              "title": "Restless and Wild"
            }
          ]
        }
      },
      {
        "Albums": {
          "rows": [
            {
              "title": "Big Ones"
            }
          ]
        },
        "Albums2": {
          "rows": [
            {
              "title": "Big Ones"
            }
          ]
        }
      }
    ]
  }
]
