crates/ndc-sqlserver/tests/snapshots/query_tests__relationships__nested_array_relationships.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "artist": "Queen",
        "Albums": {
          "rows": [
            {
              "album": "Greatest Hits II",
              "Tracks": {
                "rows": [
                  {
                    "track": "A Kind Of Magic"
                  },
                  {
                    "track": "Under Pressure"
                  },
                  {
                    "track": "Radio GA GA"
                  },
                  {
                    "track": "I Want It All"
                  }
                ]
              }
            },
            {
              "album": "Greatest Hits I",
              "Tracks": {
                "rows": [
                  {
                    "track": "Bohemian Rhapsody"
                  },
                  {
                    "track": "Another One Bites The Dust"
                  },
                  {
                    "track": "Killer Queen"
                  },
                  {
                    "track": "Fat Bottomed Girls"
                  }
                ]
              }
            },
            {
              "album": "News Of The World",
              "Tracks": {
                "rows": [
                  {
                    "track": "We Will Rock You"
                  },
                  {
                    "track": "We Are The Champions"
                  },
                  {
                    "track": "Sheer Heart Attack"
                  },
                  {
                    "track": "All Dead, All Dead"
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "artist": "Kiss",
        "Albums": {
          "rows": [
            {
              "album": "Greatest Kiss",
              "Tracks": {
                "rows": [
                  {
                    "track": "Detroit Rock City"
                  },
                  {
                    "track": "Black Diamond"
                  },
                  {
                    "track": "Hard Luck Woman"
                  },
                  {
                    "track": "Sure Know Something"
                  }
                ]
              }
            },
            {
              "album": "Unplugged [Live]",
              "Tracks": {
                "rows": [
                  {
                    "track": "Comin' Home"
                  },
                  {
                    "track": "Plaster Caster"
                  },
                  {
                    "track": "Goin' Blind"
                  },
                  {
                    "track": "Do You Love Me"
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
]
