crates/ndc-sqlserver/tests/snapshots/query_tests__relationships__nested_object_relationships.snap
---
source: crates/ndc-sqlserver/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "track": "Grito De Alerta",
        "Album": {
          "rows": [
            {
              "album": "Meus Momentos",
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "track": "Não Dá Mais Pra Segurar (Explode Coração)",
        "Album": {
          "rows": [
            {
              "album": "Meus Momentos",
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "track": "Começaria Tudo Outra Vez",
        "Album": {
          "rows": [
            {
              "album": "Meus Momentos",
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "track": "O Que É O Que É ?",
        "Album": {
          "rows": [
            {
              "album": "Meus Momentos",
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              }
            }
          ]
        }
      },
      {
        "track": "Sangrando",
        "Album": {
          "rows": [
            {
              "album": "Meus Momentos",
              "Artist": {
                "rows": [
                  {
                    "artist": "Gonzaguinha"
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
]
